@startuml
'https://plantuml.com/class-diagram

hide empty members

class Board
enum Player {
  X, O
}
class Position {
    index: Int
}
Board <|-- BoardRun
Board <|-- BoardWin
Board <|-- BoardDraw

<> Move
Board --> "*" Move : moves
Move -up-> Position : key
Move -> Player : value

BoardWin --> Player : winner
BoardRun --> Player : turn


@enduml